# swagger.yaml
@@ -15,6 +15,8 @@ tags:
     description : API to manage registered users
   - name: Orders
     description: API to manage orders.  
+  - name: Feedbacks
+    description: API to store users feedback
 
 paths:
   /newspapers:
@@ -589,7 +591,6 @@ paths:
         '404':
           description: User credentials not true.
 
-
   /orders:
     get:
       summary: Lists of all orders
@@ -615,6 +616,52 @@ paths:
         '201':
           description: Created
   
+  /feedbacks:
+    get:
+      summary: Lists feedback of all users
+      tags: [Feedbacks]
+      responses:
+        "200":
+          description: Feedback list.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Feedback'
+    
+    post:
+      summary: Posts feedback
+      tags: [Feedbacks]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Feedback'
+      responses:
+        '201':
+          description: Created
+    
+  /feedbacks/{feedId}:
+    put:
+      summary: Updates feedback by feedback ID
+      tags: [Feedbacks]
+      parameters:
+        - name: feedId
+          in: path
+          required: true
+          description: Autogenerated id by mongoDB
+          schema:
+            type: string
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Feedback'
+      responses:
+        '200':
+          description: Updated
+    
 components:
   schemas:
     Newspaper:
@@ -891,6 +938,49 @@ components:
         category: business
         qty : 3
 
+    Feedback:
+      type: object
+      required:
+        - firstname
+        - lastname
+        - telnum
+        - email
+        - contactType
+        - message
+      properties:
+        id:
+          type: integer 
+          description: The auto-generated id of the feedback.
+        firstname:
+          type: string
+          description: First name of user.
+        lastname:
+          type: string
+          description: Last name of user.
+        telnum:
+          type: string
+          description: Contact number of user.
+        email:
+          type: string
+          description: Email of user
+        contactType:
+          type: string
+          description: Contact type preferred by user
+        agree: 
+          type: Boolean
+          description: Whether user agree to contact 
+        message: 
+          type: string
+          description: Feedback os user
+                
+      example:
+        firstname: Bhanu
+        lastname: Aswitha
+        telnum: 1111111111
+        email: ab@gmail.com
+        contacttype: email
+        agree: false
+        message: Great website to use
     
 
       
